--- a/app/src/main/res/layout/activity_item_info.xml
+++ b/app/src/main/res/layout/activity_item_info.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="185dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
-        android:text="Add to cart"
+        android:text="@string/CartButton"
         app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreSeller"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Learn more about seller"
+        android:text="@string/LearnMoreSeller"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -68,7 +68,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="TextView"
+        android:text="@string/ItemDescription"
         app:layout_constraintBottom_toTopOf="@+id/textPricing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,11 +82,25 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="$20.00"
+        android:text="@string/ItemPrice"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/ButtonAddToCart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
+
+    <TextView
+        android:id="@+id/textViewStock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/ItemStock"
+        app:layout_constraintBottom_toTopOf="@+id/ButtonAddToCart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPricing" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
