--- a/app/src/main/res/layout/activity_item_info.xml
+++ b/app/src/main/res/layout/activity_item_info.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ItemInfo">
 
+    <TextView
+        android:id="@+id/textViewReviews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/ItemStock"
+        app:layout_constraintBottom_toTopOf="@+id/ButtonAddToCart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPricing"
+        app:layout_constraintVertical_bias="0.125" />
+
     <ImageView
         android:id="@+id/itemImageView"
         android:layout_width="250dp"
@@ -100,7 +116,9 @@
         android:text="@string/ItemStock"
         app:layout_constraintBottom_toTopOf="@+id/ButtonAddToCart"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPricing" />
+        app:layout_constraintTop_toBottomOf="@+id/textPricing"
+        app:layout_constraintVertical_bias="0.125" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
