--- a/app/src/main/res/layout/activity_items_view.xml
+++ b/app/src/main/res/layout/activity_items_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ItemsViewActivity">
 
-<!--    Implements the pull to refresh feature that will update stock and reviews -->
+    <!--    Implements the pull to refresh feature that will update stock and reviews -->
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
@@ -72,4 +72,14 @@
         android:typeface="monospace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewText" />
+
+    <ImageView
+        android:id="@+id/userImageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/user0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
