--- a/app/src/main/res/layout/individual_list_item.xml
+++ b/app/src/main/res/layout/individual_list_item.xml
@@ -1,75 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginVertical="1dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/itemImage"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/item0"></ImageView>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="1dp"
-            android:orientation="horizontal">
+            android:layout_marginStart="20dp"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/itemImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="10dp"
-                android:src="@drawable/item0">
-            </ImageView>
+            <TextView
+                android:id="@+id/itemName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Item Name"
+                android:textColor="#000"
+                android:textSize="17dp"></TextView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/itemName"
+                    android:id="@+id/sellerName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Item Name"
-                    android:textSize="17dp"
-                    android:textColor="#000">
+                    android:layout_marginTop="5dp"
+                    android:text="Seller Name"
+                    android:textColor="#000"
+                    android:textSize="12dp"></TextView>
+
+                <TextView
+                    android:id="@+id/averageRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Item rating"
+                    android:textColor="#000"
+                    android:textSize="12dp">
+
                 </TextView>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/sellerName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Seller Name"
-                        android:textSize="12dp"
-                        android:textColor="#000"
-                        android:layout_marginTop="5dp">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/averageRating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Seller Rating"
-                        android:textSize="12dp"
-                        android:textColor="#000"
-                        android:layout_marginTop="5dp">
-
-                    </TextView>
-
-                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</LinearLayout>
+    </RelativeLayout>
