Bug fixed and tidied the custom list view adapter

--- a/app/src/main/res/layout/activity_items_view.xml
+++ b/app/src/main/res/layout/activity_items_view.xml
@@ -9,7 +9,7 @@
     <!--    Implements the pull to refresh feature that will update stock and reviews -->
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swiperefresh"
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
