--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,10 +11,11 @@
         android:id="@+id/welcomeMessage2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Register a My Marketplace Account"
-        android:textSize="35dp"
+        android:textSize="20dp"
+        android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +25,7 @@
         android:id="@+id/username2"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="15dp"
         android:hint="Username"
@@ -37,7 +38,7 @@
         android:id="@+id/gender"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawablePadding="15dp"
         android:hint="Gender (male/female/non-binary)"
         android:padding="5dp"
@@ -50,7 +51,7 @@
         android:id="@+id/title"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawablePadding="15dp"
         android:hint="Title (Mx./Mr./Ms./Mrs.)"
         android:padding="5dp"
@@ -63,7 +64,7 @@
         android:id="@+id/name"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawablePadding="15dp"
         android:hint="Given Name"
         android:padding="5dp"
@@ -75,7 +76,7 @@
         android:id="@+id/surname"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawablePadding="15dp"
         android:hint="Surname"
         android:padding="5dp"
@@ -88,7 +89,7 @@
         android:id="@+id/state"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawablePadding="15dp"
         android:hint="State"
         android:padding="5dp"
@@ -101,7 +102,7 @@
         android:id="@+id/zip"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawablePadding="15dp"
         android:hint="Zip code"
         android:padding="5dp"
@@ -114,7 +115,7 @@
         android:id="@+id/password2"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="15dp"
         android:hint="Password"
@@ -128,7 +129,7 @@
         android:id="@+id/register2"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="15dp"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.50"
