--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:height="108dp" android:viewportHeight="1800"
+    android:viewportWidth="1800" android:width="108dp" >
     <path
         android:fillColor="#FFFFFF"
         android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
+        android:pathData="M1199.3,592.7C1242.9,592.7 1265.2,615 1266.9,659.5L1288.3,1207.2L1114.6,1207.2L1095.9,737L1082.6,737L1022,1050.5C1015.8,1089.7 991.7,1109.3 949,1109.3L849.2,1109.3C807.4,1109.3 782.5,1089.7 775.3,1050.5L713.9,737L700.5,737L685.4,1207.2L511.7,1207.2L533.1,659.5C534.9,615 557.1,592.7 600.8,592.7L767.3,592.7C809.2,592.7 833.2,612.3 840.3,652.4L884.9,896.4C887.5,911.5 889.3,926.7 891.1,941.8C892,957 893.8,973 894.7,988.1L902.7,988.1C904.5,973 906.2,957 908,941.8C908.9,926.7 910.7,911.5 913.4,896.4L955.2,652.4C962.4,612.3 987.3,592.7 1029.1,592.7L1199.3,592.7Z"
+        android:strokeWidth="0"
         android:strokeColor="#00000000" />
 </vector>
