--- a/app/src/main/res/layout/activity_items_view.xml
+++ b/app/src/main/res/layout/activity_items_view.xml
@@ -33,10 +33,10 @@
 
     <EditText
         android:id="@+id/editTextSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:autofillHints="@+id/SearchAutofill"
         android:ems="10"
         android:hint="@string/SearchAutofill"
@@ -44,17 +44,18 @@
         android:minHeight="48dp"
         android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/userImageView"
+        app:layout_constraintStart_toStartOf="@+id/clearButton"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="@string/SearchButtonText"
+        app:backgroundTint="@color/darkgrey"
         app:layout_constraintBottom_toTopOf="@+id/swipeRefresh"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />
@@ -65,10 +66,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/ClearButtonText"
         android:textColor="#FFFFFF"
-        app:backgroundTint="#E91E63"
+        app:backgroundTint="@color/darkgrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />
@@ -76,9 +77,9 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="32dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="@string/Spinnerdescription"
         android:text="@string/SpinnerText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,12 +89,17 @@
 
     <ImageView
         android:id="@+id/userImageView"
-        android:layout_width="80dp"
+        android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:contentDescription="@string/UserImageDescription"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/clearButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/user0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
